--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hamburger-menu": "^1.1.1",
     "react-loader-spinner": "^3.1.5",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
